# epuri

./: .gitignore  Readme.md  attacker.Dockerfile  build.Dockerfile  build.sh  client.Dockerfile  docker-compose.yaml  server.Dockerfile
apps/: CMakeLists.txt  Makefile  epuri.c  graph.py  profile.sh  profile_sandboxed.sh
apps/fssl/: CMakeLists.txt
apps/fssl/src/: ssl.c
apps/simplelogger/: CMakeLists.txt
apps/simplelogger/include/simplelogger/: log.h
apps/simplelogger/src/: CMakeLists.txt  log.c
apps/simplenet/: CMakeLists.txt
apps/simplenet/include/simplenet/: client.h  net.h  server.h
apps/simplenet/src/: CMakeLists.txt  client.c  net.c  server.c
apps/simplenoti/: CMakeLists.txt
apps/simplenoti/src/: CMakeLists.txt  common.c  common.h  main.c  sandbox.c  sandbox.h  scm_functions.c  scm_functions.h  tracer.c  tracer.h
data/: client-secure.conf  client.conf  redis-client.conf  redis-server.conf  server.conf
scripts/: gen-ca-certs.sh  gen-redis-client-certs.sh  gen-redis-server-certs.sh
